--- a/rrd.service
+++ b/rrd.service
@@ -1,12 +1,10 @@
 [Unit]
 Description=Log sensor values to round robin database
 DefaultDependencies=no
-After=multi-user.target
+After=network.target
 
 [Service]
-ExecStart=/usr/bin/bash $HOME/Software/rrdsensors/run_rrd.sh 
-Restart=on-failure
-RestartSec=1s
+ExecStart=/usr/bin/run_rrd.sh 
 
 [Install]
 WantedBy=multi-user.target
